lunaa: overlay: pulse doze on pickup
Change-Id: Ic153c0ce2e7fbe9e4018f36790e18d9cc791d232
Signed-off-by: rk134 <me@rk134.cf>

--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -65,5 +65,7 @@
    <string name="config_wlan_data_service_package" translatable="false">vendor.qti.iwlan</string>
    <string name="config_wlan_network_service_package" translatable="false">vendor.qti.iwlan</string>
    <string name="config_qualified_networks_service_package" translatable="false">vendor.qti.iwlan</string>
-
+    
+    <!-- Doze: should the TYPE_PICK_UP_GESTURE sensor be used as a pulse signal. -->
+    <bool name="config_dozePulsePickup">true</bool>
 </resources>
