--- a/overlay/AOSPALunaaSystemUI/res/values/config.xml
+++ b/overlay/AOSPALunaaSystemUI/res/values/config.xml
@@ -20,7 +20,7 @@
     <bool name="config_audioPanelOnLeftSide">true</bool>
 
     <!-- UDFPS Color -->
-    <color name="config_udfpsColor">#ffffe6</color>
+    <color name="config_udfpsColor">#00ffffff</color>
 
     <!-- HBM type of UDFPS overlay.
             0 - GLOBAL HBM 
